--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,10 @@ mybatis.mapper-locations=classpath:/mapper/*.xml
 # 사용자 업로드 경로 설정(이름은 임의로 정의)
 # 상품 기본 이미지 업로드 폴더
 file.dir=C:\\Dev\\upload\\product\\
+
 # 상품 상세 설명 이미지 업로드 폴더(CKEditor 사용)
 file.ckdir=C:\\Dev\\upload\\ckeditor\\
+
+# AWS 우분투용
+# file.dir=/www/dev/upload/product/
+# file.ckdir=/www/dev/upload/ckeditor/
